[tool.poetry]
name = "pysnc"
version = "1.1.0"
description = "Python SNC (REST) API"
authors = ["Matthew Gill <matthew.gill@servicenow.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ServiceNow/PySNC"
documentation = "https://servicenow.github.io/PySNC/"
keywords = ["servicenow", "snc"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.8.1"
six = ">=1.10.0"
requests-oauthlib = { version = ">=1.2.0", optional = true}

[tool.poetry.extras]
oauth = ["requests-oauthlib"]

[tool.poetry.group.dev.dependencies]
requests-oauthlib = ">=1.2.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
