[tool.poetry]
name = "pysnc"
version = "1.1.11a0"
description = "Python SNC (REST) API"
authors = [
    "Matthew Gill <matthew.gill@servicenow.com>",
    "Patrice Bechard <patrice.bechard@servicenow.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ServiceNow/PySNC"
documentation = "https://servicenow.github.io/PySNC/"
keywords = ["servicenow", "snc"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.32"
requests-oauthlib = { version = ">=1.2.0", optional = true}
certifi = "^2024.7.4"
urllib3 = ">=2.5"

# async deps
asyncio = { version = "^4.0.0", optional = true }
httpx = { version = "^0.28.1", optional = true }

[tool.poetry.extras]
oauth = ["requests-oauthlib"]
asyncio = ["asyncio", "httpx"]

[tool.poetry.group.dev.dependencies]
requests-oauthlib = ">=1.2.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
mypy = "^1.2.0"
types-requests = "^2.29.0.0"
types-oauthlib = "^3.2.0.7"
jake = "^3.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
